# comp0163-blockchain-technologies

./: .gitignore  LICENSE  README.md  pyproject.toml
AMM/: CPAMM.sol  ERC20.sol  IERC20.sol
daml/cash_simple/: daml.yaml
daml/cash_simple/daml/: Cash.daml
daml/coworking_full/: daml.yaml
daml/coworking_full/.daml/dependencies/1.13/: fingerprint.json
daml/coworking_full/.daml/dependencies/1.13/7f251391d4950ccf51b9983ebd2ffe1823d49ce92b536cc4ea96c18b38e2ae28/: daml-stdlib-1.15.0-7f251391d4950ccf51b9983ebd2ffe1823d49ce92b536cc4ea96c18b38e2ae28.dalf
daml/coworking_full/.daml/interfaces/Main/: CWspace.hi  CWspace.hie  CWtest2.hi  CWtest2.hie  CWtestnew.hi  CWtestnew.hie  Cash.hi  Cash.hie  DataTypes.hi  DataTypes.hie  Exvaccine.hi  Exvaccine.hie
daml/coworking_full/.daml/package-database/: metadata.json
daml/coworking_full/.daml/package-database/1.13/package.conf.d/: daml-script-1.15.0.conf  package.cache
daml/coworking_full/Main/: CWspace.daml  CWtestnew.daml  Cash.daml  DataTypes.daml
daml/space_listing/: daml.yaml
daml/space_listing/daml/: Main.daml
data_scripts/bigql/: bigql.ipynb  bigql.py
data_scripts/cryptocompare/: cryptocompare.ipynb  cryptocompare.py
data_scripts/cryptocompare/fig/: candlestick.ppm
data_scripts/ethtools/: ethtools.ipynb  ethtools.py
data_scripts/thegraph/: thegraph.ipynb  thegraph.py
environ/: constants.py  data_fetcher.py  settings.py
mwe-data-scripts/: README.md
mwe-data-scripts/bigql/: README.ipynb  README.md  YOUR_JSON_KEY_FILE.json  bigql.ipynb  bigql.py
mwe-data-scripts/cryptocompare/: README.ipynb  btc.json  cryptocompare.ipynb  cryptocompare.py
mwe-data-scripts/data/: BTC-price.json  btc.json
mwe-data-scripts/ethtools/: abi.json  ethtools.ipynb  ethtools.py
mwe-data-scripts/thegraph/: README.ipynb  thegraph.ipynb  thegraph.py
my-token/: MyToken.sol
(+1 files in other folders)
